Wrap link content in span to fix alignment.

--- a/assets/sass/components/global/_googlesitekit-cta-link.scss
+++ b/assets/sass/components/global/_googlesitekit-cta-link.scss
@@ -20,7 +20,7 @@
 	align-items: center;
 	color: $c-link;
 	cursor: pointer;
-	display: inline-block;
+	display: inline-flex;
 	font-family: inherit;
 	font-size: inherit;
 	font-weight: inherit;
