--- a/assets/sass/components/global/_googlesitekit-icon-wrapper.scss
+++ b/assets/sass/components/global/_googlesitekit-icon-wrapper.scss
@@ -22,8 +22,4 @@
 		align-items: center;
 		display: inline-flex;
 	}
-
-	.googlesitekit-cta-link .googlesitekit-icon-wrapper {
-		vertical-align: middle;
-	}
 }
